# budget-overview

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: BudgetDiagram.tsx  BudgetItemForm.tsx  CashflowDiagram.tsx  ThemeSelector.tsx  ThemeToggle.tsx  UpcomingBillsSidebar.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/: BudgetItems.tsx  Dashboard.tsx  Snapshots.tsx  Summary.tsx  Tags.tsx
frontend/src/themes/: budgetDefaultTheme.ts  catppuccinTheme.ts  everforestTheme.ts  gruvboxTheme.ts  index.ts  nordTheme.ts  scienceTheme.ts  solarizedTheme.ts  themeManager.ts  types.ts
