[package]
name = "budget-overview-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "budget_overview_backend"
path = "src/lib.rs"

[[bin]]
name = "budget-overview-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
