[package]
name = "budget-overview-tauri"
version = "1.5.1"
edition = "2021"

[lib]
name = "budget_overview_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tokio = { version = "1", features = ["rt", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
budget-overview-backend = { path = "../../backend" }
